Record pre-push review finding for org.xerial.snappy:snappy-java:1.1.0.1